--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,13 @@
   }
 }
 
+html,
+body {
+  width: 100%;
+  overflow-x: hidden;
+  touch-action: manipulation;
+}
+
 
 /* reusable class */
 @layer components {
